--- a/vite-project/src/components/button/styles.module.css
+++ b/vite-project/src/components/button/styles.module.css
@@ -1,16 +1,3 @@
 .root {
-        background-color: #4CAF50; /* Green */
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 5px;
-    }
+height: 20px;}
     
-
-.root:hover {
-    box-shadow: 0 0 0 2px white, 0 0 0 4px #3C82F8;
-}
