--- a/vite-project/src/components/menu/styles.module.css
+++ b/vite-project/src/components/menu/styles.module.css
@@ -1,13 +1,2 @@
 .root{
-    width: 33.33333%;}
-.h3{
-    margin: 0;
-}
-.ul{
-list-style-type: none;
-padding: 0 ;
-}
-
-.li{
-    color: rgb(5, 98, 98);
-}
+background-color: grey;}
