--- a/vite-project/src/components/restaurant/styles.module.css
+++ b/vite-project/src/components/restaurant/styles.module.css
@@ -1,9 +1,3 @@
 .root{
-    display: flex;
-    align-items: center;
-        /* justify-content: center; */
-gap: 20px;
-}
-.h2{
-    width: 33.33333%;    vertical-align: center;
+    background-color: blanchedalmond;
 }
