--- a/vite-project/src/components/header/styles.module.css
+++ b/vite-project/src/components/header/styles.module.css
@@ -1,5 +1,6 @@
 .root {
-    background-color: #000000;
-    color: white;
-    position: relative;
+    background-color: #1e9438;
+    display: flex;
+    justify-content: space-between;
+    padding: 30px;
 }
